# BNT

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp  project.notes
BooleanNetworkTool/include/: booleanNetwork.h
BooleanNetworkTool/src/: basicNetwork.cpp
BooleanNetworkWebApp/: CMakeLists.txt  index.html  main.cpp
BooleanNetworkWebApp/include/BooleanNetworkEmulator/include/: booleanNetwork.h
BooleanNetworkWebApp/include/BooleanNetworkEmulator/src/: basicNetwork.cpp
arrayImp/: utils.cpp  utils.hpp
classes/: array.cpp  basicNetwork.cpp  boolnet.cpp  boolnet.hpp  output.cpp  output.hpp  utils.hpp
docs/Interim Report/: InterimReport.aux  InterimReport.bbl  InterimReport.blg  InterimReport.fdb_latexmk  InterimReport.fls  InterimReport.tex  InterimReportRefs.bib
docs/InterimReport/: InterimReport.aux  InterimReport.blg  InterimReport.fdb_latexmk  InterimReport.fls  InterimReport.tex  refs.bib
include/: booleanNetwork.h  boolnet.hpp
include/BNT/: CMakeLists.txt  booleanAlgebra.h  booleanNetwork.h
include/BNT/src/: basicNetwork.cpp  boolAlgebra.cpp  netStrucs.cpp  netUtils.cpp  nodeNetwork.cpp  tree.cpp
include/BoolNet/: basicNetwork.cpp
src/: basicNetwork.cpp  crow.cpp  index.html  main  main.cpp  network.cpp  savedNetworks.json
src/models/: basicNetwork.cpp  booleanNetwork.cpp  syncNetwork.cpp
src/shellScripts/: deploy.sh  kill.sh  restart.sh
src/terminal/: output.hpp  printStructs.cpp  utilityFuncs.cpp  utils.hpp  vectorOut.cpp
src/webApp/: index.css  index.html  index.js
terminal/: output.cpp  output.hpp
webApp/: index.html  main.cpp
